helm/监控/yaml/alert-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alertmanager
spec:
  gateways:
    - alertmanager
  hosts:
    - alertmanager.xiejiawen.com
  http:
  #- match:
  #  - uri:
  #      prefix: /graph
  - route:
    - destination:
        host: prometheus-kube-prometheus-alertmanager.default.svc.cluster.local
        port:
          number: 9093
---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: alertmanager
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - alertmanager.xiejiawen.com
      port:
        name: http-prom
        number: 80
        protocol: HTTP
