helm/监控/yaml/grafana-gw.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: route
spec:
  hosts:
  - grafana.xiejiawen.com
  gateways:
  - grafana-gw
  http:
  - route:
    - destination:
        host: prometheus-grafana.default.svc.cluster.local  #<---- server name
        port:
          number: 80

---
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: grafana-gw
spec:
  selector:
    istio: ingressgateway # use Istio default gateway implementation
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - grafana.xiejiawen.com
